# ProjectionBallUnit

./: README.md
firm/BinFiles/: ProjectionBallUnit_v1.0_231121.uf2  ProjectionBallUnit_v1.1_231209.uf2  ProjectionBallUnit_v1.2_231209.uf2  ProjectionBallUnit_v1.3_240207.uf2
firm/ProjectionBall/: CMakeLists.txt  ProjectionBall.c  ProjectionBall.h  console.c  console.h  encoder_as5048a.c  encoder_as5048a.h  encoder_ma732.c  encoder_ma732.h  flash_ctrl.c  flash_ctrl.h  motor_ctrl.c  motor_ctrl.h  path_const.c  path_const.h  path_ctrl.c  path_ctrl.h  path_font.c  path_font.h  rtc_rv8803.c  rtc_rv8803.h  rtc_sd30XX.c  rtc_sd30XX.h
pcb/main/: RTC.lib  fp-info-cache  fp-lib-table  projectionball-all.pos  projectionball-cache.lib  projectionball-rescue.bak  projectionball-rescue.lib  projectionball.bak  projectionball.cmp  projectionball.csv  projectionball.dsn  projectionball.kicad_pcb  projectionball.kicad_pcb-bak  projectionball.net  projectionball.pro  projectionball.rules  projectionball.sch  projectionball.ses  projectionball.xml  projectionball_ansi.csv  sym-lib-table
pcb/main/GERBER/: projectionball-B_Cu.gbl  projectionball-B_Mask.gbs  projectionball-B_Paste.gbp  projectionball-B_SilkS.gbo  projectionball-Edge_Cuts.gm1  projectionball-F_Cu.gtl  projectionball-F_Mask.gts  projectionball-F_Paste.gtp  projectionball-F_SilkS.gto  projectionball-all-pos.csv  projectionball.drl
pcb/main/parts/: con-hirose.bak  (+10 more)
pcb/sen1/: ma73x-cache.lib  ma73x.bak  ma73x.dsn  ma73x.kicad_pcb  ma73x.kicad_pcb-bak  ma73x.pro  ma73x.rules  ma73x.sch  ma73x.ses
pcb/sen2/: fp-info-cache  ma732.lib  ma73x-cache.lib  ma73x.bak  ma73x.dsn  ma73x.kicad_pcb  ma73x.net  ma73x.rules  ma73x.sch  ma73x.ses  sym-lib-table
pcb/sub/: fp-info-cache  fp-lib-table  projectionball-rescue.lib  projectionball.bak  projectionball.csv  projectionball.dsn  projectionball.kicad_pcb  projectionball.kicad_pcb-bak  projectionball.net  projectionball.pro  projectionball.sch  projectionball.sch-bak  projectionball.ses
(+46 files in other folders)
